2023-09-16T16:10:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6208345704 # 1902
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-16
* notice: last 14d: unq all: 19 62
* notice: prev accum: outdated-unq outdated-all / unq all: 585 1688 / 604 1747
* notice: next accum: outdated-unq outdated-all / unq all: 586 1690 / 605 1752
* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +1 +5 -0 -0 / 1 5
* notice: removed / changed dates: [2023-09-02] / [2023-09-16]

2023-09-16T00:40:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6204162982 # 1900
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-16
* notice: last 14d: unq all: 19 59
* notice: prev accum: outdated-unq outdated-all / unq all: 585 1688 / 603 1738
* notice: next accum: outdated-unq outdated-all / unq all: 585 1688 / 604 1747
* notice: prev exec diff / last date diff / accum: unq all: +1 +9 -0 -0 / +2 +13 -0 -0 / 2 13
* notice: removed / changed dates: [] / [2023-09-15]

2023-09-15T16:11:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6200355095 # 1899
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-15
* notice: last 14d: unq all: 18 50
* notice: prev accum: outdated-unq outdated-all / unq all: 583 1668 / 602 1734
* notice: next accum: outdated-unq outdated-all / unq all: 585 1688 / 603 1738
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [2023-09-01] / [2023-09-15]

2023-09-15T00:41:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6192435155 # 1897