@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-16T16:10:07Z",
-  "count_outdated" : 1690,
-  "uniques_outdated" : 586,
+  "timestamp" : "2023-09-17T08:10:35Z",
+  "count_outdated" : 1691,
+  "uniques_outdated" : 587,
   "count" : 1752,
   "uniques" : 605,
   "views" : [
-    {
-      "timestamp": "2023-09-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-06T00:00:00Z",
       "count": 7,
