@@ -1,12 +1,7 @@
 {
-  "count": 62,
-  "uniques": 19,
+  "count": 61,
+  "uniques": 18,
   "views": [
-    {
-      "timestamp": "2023-09-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-06T00:00:00Z",
       "count": 7,
