@@ -1,3 +1,12 @@
+2023-09-17T08:10:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6212455457 # 1904
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-17
+* notice: last 14d: unq all: 18 61
+* notice: prev accum: outdated-unq outdated-all / unq all: 586 1690 / 605 1752
+* notice: next accum: outdated-unq outdated-all / unq all: 587 1691 / 605 1752
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-03] / []
+
 2023-09-16T16:10:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6208345704 # 1902
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-16
